fix: 全面修复 ToF 测距仪
- 修复 TiltCompensator 倾斜补偿核心逻辑（accelPitch 未存储、无陀螺仪时失效）
- 优化 DistanceChartView: 环形缓冲区 + 节流重绘 (~12fps)
- 优化 DistanceStats: ArrayList→ArrayDeque O(1) 操作
- 优化 MainActivity: rawHistory ArrayList→ArrayDeque
- 删除未使用的 ZoneFusion.java
- 启用 AndroidX (gradle.properties)
- CI 移除多余 gradle wrapper 生成步骤
- 启用 Release 混淆 + 添加 proguard-rules.pro
- 添加 VIBRATE 权限声明
- 关闭 allowBackup (安全加固)